--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 4px 4px 16px rgba(1, 28, 64, 0.2);
+  background-color: $third;
 }
 
 .wrap {
